--- a/views/login.html
+++ b/views/login.html
@@ -6,5 +6,19 @@
 
     <body>
         <h1> login </h1>
+
+        <form action="/login" method="POST">
+            <div>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+             <div>
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit">Login</button>
+        </form>
+
+        <a href="/register">register</a>
     </body>
 </html>
