more basic shit implemented

--- a/views/index.html
+++ b/views/index.html
@@ -7,5 +7,13 @@
     <body>
         <h1>not logged in: browse</h1>
         <a href="/login">login</a>
+
+        <div>
+            <h2>The Courses</h2>
+        </div>
+
+        <aside>
+            <h2>Search</h2>
+        </aside>
     </body>
 </html>
