--- a/views/login.html
+++ b/views/login.html
@@ -9,8 +9,8 @@
 
         <form action="/login" method="POST">
             <div>
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
+                <label for="student_number">Student number</label>
+                <input type="number" id="student_number" name="emastudent_numberil" required>
             </div>
              <div>
                 <label for="password">Password</label>
@@ -19,6 +19,6 @@
             <button type="submit">Login</button>
         </form>
 
-        <a href="/register">register</a>
+        Don't have an account? <a href="/register">register</a>
     </body>
 </html>
