--- a/views/register.html
+++ b/views/register.html
@@ -9,20 +9,52 @@
 
         <form action="/register" method="POST">
             <div>
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
+                <label for="student_number">Student number</label>
+                <input type="number" id="student_number" name="student_number" required>
             </div>
 
             <div>
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
+                <label for="first_name">First name</label>
+                <input type="text" id="first_name" name="first_name" required>
             </div>
+
+            <div>
+                <label for="last_name">Last name</label>
+                <input type="text" id="last_name" name="last_name" required>
+            </div>
+
              <div>
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
             </div>
+
+            <div>
+                <label for="password">Confirm password</label>
+                <input type="password" id="confirm_password" name="confirm_password" required>
+            </div>
+
+            <div>
+                <label for="Academic level">Academic level</label>
+                <select name="level">
+                    <option value="BSc">BSc</option>
+                    <option value="MSc">MSc</option>
+                </select>
+            </div>
+
+            <div>
+                <label for="programme">Programme</label>
+                <select name="programme">
+                    <option value="Computer Science">Computer Science</option>
+                    <option value="Physics and Astronomy">Physics and Astronomy</option>
+                    <option value="Mathematics">Mathematics</option>
+                    <option value="Artificial Intelegance">Artificial Intelegance</option>
+                </select>
+            </div>
             <button type="submit">Register</button>
         </form>
 
+        <p>
+            Have an account? <a href="/login">Login</a>
+        </p>
     </body>
 </html>
