--- a/views/index.html
+++ b/views/index.html
@@ -8,8 +8,9 @@
         <h1>not logged in: browse</h1>
         <a href="/login">login</a>
 
-        <div>
-            <h2>The Courses</h2>
+        <div id="courses">
+            <button id="btn">Get More Courses</button>
+            <script src="app.js"></script>
         </div>
 
         <aside>
