login & registering now connectied to database

--- a/views/browse.html
+++ b/views/browse.html
@@ -4,8 +4,16 @@
 
     </head>
 
+    <header>
+        <h1>Courses</h1>
+        <ul>
+            <li><a href="">Courses</a></li>
+            <li><a href="">Enrolled courses</a></li>
+            <li><a href="">Account</a></li>
+            <li><a href="/logout">Logout</a></li>
+        </ul>
+    </header>
+
     <body>
-        <h1>logged in: browse</h1>
-        <a href="/logout">Logout</a>
     </body>
 </html>
