--- a/views/course-details.html
+++ b/views/course-details.html
@@ -4,8 +4,16 @@
 
     </head>
 
+    <header>
+        <h1>Course details</h1>
+        <ul>
+            <li><a href="/">Courses</a></li>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Register</a></li>
+        </ul>
+    </header>
+
     <body>
-        <h1>course details for course:</h1>
-        <script src="/course-details.js"></script>
+        <script src="/javascript/course-details.js"></script>
     </body>
 </html>
