--- a/views/index.html
+++ b/views/index.html
@@ -4,17 +4,20 @@
 
     </head>
 
-    <body>
-        <h1>not logged in: browse</h1>
-        <a href="/login">login</a>
+    <header>
+        <h1>Courses</h1>
+        <ul>
+            <li><a href="/">Courses</a></li>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Register</a></li>
+        </ul>
+    </header>
 
+    <body>
         <div id="courses">
-            <button id="btn">Get More Courses</button>
-            <script src="app.js"></script>
         </div>
 
-        <aside>
-            <h2>Search</h2>
-        </aside>
+        <button id="btn">Get More Courses</button>
+        <script src="javascript/app.js"></script>
     </body>
 </html>
