--- a/views/login.html
+++ b/views/login.html
@@ -10,7 +10,7 @@
         <form action="/login" method="POST">
             <div>
                 <label for="student_number">Student number</label>
-                <input type="number" id="student_number" name="emastudent_numberil" required>
+                <input type="number" id="student_number" name="student_number" required>
             </div>
              <div>
                 <label for="password">Password</label>
