--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,50 @@
     </header>
 
     <body>
+        <div>
+            <h2>Search</h2>
+
+            <div>
+                <label for="course_name">Course</label>
+                <input type="text" name="course_name" id="course_name">
+            </div>
+
+            <div>
+                <label for="programme">Programme</label>
+                <select name="programme" id="programme">
+                    <option value="*">All</option>
+                    <option value="Computer Science">Computer Science</option>
+                    <option value="Physics and Astronomy">Physics and Astronomy</option>
+                    <option value="Mathematics">Mathematics</option>
+                    <option value="Artificial Intelegance">Artificial Intelegance</option>
+                </select>
+            </div>
+
+            <div>
+                <label for="Academic level">Academic level</label>
+                <select name="level" id="level">
+                    <option value="*">All</option>
+                    <option value="BSc">BSc</option>
+                    <option value="MSc">MSc</option>
+                </select>
+            </div>
+
+            <div>
+                <label for="semester">Semester</label>
+                <select name="semester" id="semester">
+                    <option value="*">All</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                </select>
+            </div>
+
+            <button id="search_btn">Search</button>
+        </div>
+
+        <h2>The Courses</h2>
+
         <div id="courses">
         </div>
 
