--- a/views/index.html
+++ b/views/index.html
@@ -6,11 +6,22 @@
 
     <header>
         <h1>Courses</h1>
-        <ul>
-            <li><a href="/">Courses</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/register">Register</a></li>
-        </ul>
+        <div id="default">
+            <ul>
+                <li><a href="/">Courses</a></li>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/register">Register</a></li>
+            </ul>
+        </div>
+
+        <div id="auth">
+            <ul>
+                <li><a href="/">Courses</a></li>
+                <li><a href="/enrolled-courses">Enrolled courses</a></li>
+                <li><a href="/account">Account</a></li>
+                <li><a href="/logout">Logout</a></li>
+            </ul>
+        </div>
     </header>
 
     <body>
