--- a/views/course-information.html
+++ b/views/course-information.html
@@ -7,9 +7,10 @@
    <header>
         <h1>Course Details</h1>
         <ul>
-            <li><a href="/">Courses</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/register">Register</a></li>
+            <li><a href="/browse">Courses</a></li>
+            <li><a href="/enrolled-courses">Enrolled courses</a></li>
+            <li><a href="/account">Account</a></li>
+            <li><a href="/logout">Logout</a></li>
         </ul>
     </header>
 
