--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,63 @@
 body {
-    background-color: aliceblue;
+    margin: 0;
+    background-color: #101010;
+    color: white;
+    font-variant: small-caps;
+    font-family: "Helvetica";
+}
+
+
+#search {
+    background-color: #1E2022;
+    float: right;
+    width: 25%;
+    padding: 10px;
+}
+
+#courses {
+    width: 70%;
+}
+
+.container {
+    background-color: #1E2022;
+    margin: 15px;
+    line-height: 175%;
+    font-size: 21px;
+    text-align: center;
+}
+
+/* Header styles */
+header {
+	background-color: darkcyan;
+	margin-bottom: 20px;
+}
+
+header .content-wrapper {
+	display: flex;
+	justify-content: space-between;
+    align-items: center;
+    margin: 10px;
+    margin-top: 0;
+}
+
+ ul {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	text-transform: uppercase;
+	display: flex;
+	align-items: center;
+}
+
+ ul li {
+	margin-right: 10px;
+    padding-right: 10px;
+    border-right: 1px solid black;
+    line-height: 40px;
+}
+
+a {
+    color: white;
+    text-decoration: none;
 }
