--- a/views/index.html
+++ b/views/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <link rel="stylesheet" href="main.css"/>
     </head>
 
     <header>
-        <h1>Courses</h1>
-        <ul>
-            <li><a href="/">Courses</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/register">Register</a></li>
-        </ul>
+        <div class="content-wrapper">
+            <h1>WEBTECH ASSIGNMENT 3</h1>
+            <ul>
+                <li><a href="/">Courses</a></li>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/register">Register</a></li>
+            </ul>
+        </div>
     </header>
 
     <body>
-        <div>
+        <div id=search>
             <h2>Search</h2>
 
             <div>
