--- a/public/main.css
+++ b/public/main.css
@@ -1,43 +1,50 @@
 body {
     margin: 0;
-    background-color: #101010;
+    background-color: #000000;
     color: white;
     font-variant: small-caps;
     font-family: "Helvetica";
-}
-
-
-#search {
-    background-color: #1E2022;
-    float: right;
-    width: 25%;
-    padding: 10px;
-}
-
-#courses {
-    width: 70%;
-}
-
-.container {
-    background-color: #1E2022;
-    margin: 15px;
-    line-height: 175%;
-    font-size: 21px;
     text-align: center;
 }
 
-/* Header styles */
-header {
-	background-color: darkcyan;
-	margin-bottom: 20px;
+#wrapper {
+   display: flex;
 }
 
-header .content-wrapper {
-	display: flex;
+#search {
+    float: right;
+    width: 30%;
+    padding: 15px;
+}
+
+#courses {
+    width: 65%;
+    padding: 15px;
+}
+
+.container {
+    background-color: #2C2C2C;
+    padding: 5px;
+    line-height: 160%;
+    font-size: 21px;
+    text-align: left;
+    margin-bottom: 15px;
+}
+
+.container:hover {
+    color: #D4FF17;
+}
+
+header {
+	background-color: #141414;
+	margin-bottom: 20px;
+    display: flex;
 	justify-content: space-between;
     align-items: center;
-    margin: 10px;
     margin-top: 0;
+    padding: 10px;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
  ul {
@@ -59,5 +66,62 @@ header .content-wrapper {
 
 a {
     color: white;
-    text-decoration: none;
+    text-decoration: underline;
+}
+
+a:hover {
+    color: #D4FF17;
+    text-decoration: underline;
+}
+
+button {
+    background-color: #D4FF17;
+    border: 0;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-left: 25px;
+    padding-right: 25px;
+    font-size: 12px;
+
+}
+
+select {
+    width: 90%;
+    margin-bottom: 15px;
+    background-color: #DDD;
+    border: 0;
+    padding: 5px;
+}
+
+input {
+    width: 90%;
+    margin-bottom: 15px;
+    background-color: #DDD;
+    border: 0;
+    padding: 5px;
+}
+
+.float-container {
+    text-align: left;
+    background-color: #2C2C2C;
+    padding: 15px;
+    line-height: 150%;
+    height: auto;
+    width: 275px;
+    display: inline-block;
+    top: 150px;
+}
+
+@media only screen and (max-width: 675px) {
+    #search {
+        width: 90%;
+    }
+
+    #courses {
+        width: 90%;
+    }
+
+    nav ul li {
+        display: table;
+    }
 }
