--- a/views/enrolled-courses.html
+++ b/views/enrolled-courses.html
@@ -1,1 +1,20 @@
-enrolled-courses
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" href="main.css"/>
+    </head>
+
+    <header>
+        <h1>WEBTECH ASSIGNMENT 3</h1>
+        <ul>
+            <li><a href="/browse">Courses</a></li>
+            <li><a href="/enrolled-courses">Enrolled courses</a></li>
+            <li><a href="/account">Account</a></li>
+            <li><a href="/logout">Logout</a></li>
+        </ul>
+    </header>
+
+    <body>
+        <h1>Enrolled Courses</h1>
+    </body>
+</html>
