--- a/views/login.html
+++ b/views/login.html
@@ -5,20 +5,22 @@
     </head>
 
     <body>
-        <h1> login </h1>
+        <div class="float-container">
+            <h1> login </h1>
 
-        <form action="/login" method="POST">
-            <div>
-                <label for="student_number">Student number</label>
-                <input type="number" id="student_number" name="student_number" required>
-            </div>
-             <div>
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type="submit">Login</button>
-        </form>
+            <form action="/login" method="POST">
+                <div>
+                    <input type="number" id="student_number" name="student_number" placeholder="student number" required>
+                </div>
+                 <div>
+                    <input type="password" id="password" name="password" placeholder="password" required>
+                </div>
+                <button type="submit">Login</button>
+            </form>
 
-        Don't have an account? <a href="/register">register</a>
+            <hr>
+
+            Don't have an account? <a href="/register">register</a>
+        </div>
     </body>
 </html>
