--- a/views/register.html
+++ b/views/register.html
@@ -1,60 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <link rel="stylesheet" href="main.css"/>
     </head>
 
     <body>
-        <h1> register </h1>
+        <div class="float-container">
+            <h1> register </h1>
 
-        <form action="/register" method="POST">
-            <div>
-                <label for="student_number">Student number</label>
-                <input type="number" id="student_number" name="student_number" required>
-            </div>
+            <form action="/register" method="POST">
+                <div>
+                    <label for="student_number">Student number</label>
+                    <input type="number" id="student_number" name="student_number" required>
+                </div>
 
-            <div>
-                <label for="first_name">First name</label>
-                <input type="text" id="first_name" name="first_name" required>
-            </div>
+                <div>
+                    <label for="first_name">First name</label>
+                    <input type="text" id="first_name" name="first_name" required>
+                </div>
 
-            <div>
-                <label for="last_name">Last name</label>
-                <input type="text" id="last_name" name="last_name" required>
-            </div>
+                <div>
+                    <label for="last_name">Last name</label>
+                    <input type="text" id="last_name" name="last_name" required>
+                </div>
 
-             <div>
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
-            </div>
+                 <div>
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
 
-            <div>
-                <label for="password">Confirm password</label>
-                <input type="password" id="confirm_password" name="confirm_password" required>
-            </div>
+                <div>
+                    <label for="password">Confirm password</label>
+                    <input type="password" id="confirm_password" name="confirm_password" required>
+                </div>
 
-            <div>
-                <label for="Academic level">Academic level</label>
-                <select name="level">
-                    <option value="BSc">BSc</option>
-                    <option value="MSc">MSc</option>
-                </select>
-            </div>
+                <div>
+                    <label for="Academic level">Academic level</label>
+                    <select name="level">
+                        <option value="BSc">BSc</option>
+                        <option value="MSc">MSc</option>
+                    </select>
+                </div>
 
-            <div>
-                <label for="programme">Programme</label>
-                <select name="programme">
-                    <option value="Computer Science">Computer Science</option>
-                    <option value="Physics and Astronomy">Physics and Astronomy</option>
-                    <option value="Mathematics">Mathematics</option>
-                    <option value="Artificial Intelegance">Artificial Intelegance</option>
-                </select>
-            </div>
-            <button type="submit">Register</button>
-        </form>
+                <div>
+                    <label for="programme">Programme</label>
+                    <select name="programme">
+                        <option value="Computer Science">Computer Science</option>
+                        <option value="Physics and Astronomy">Physics and Astronomy</option>
+                        <option value="Mathematics">Mathematics</option>
+                        <option value="Artificial Intelegance">Artificial Intelegance</option>
+                    </select>
+                </div>
+                <button type="submit">Register</button>
+            </form>
 
-        <p>
+            <hr>
+
             Have an account? <a href="/login">Login</a>
-        </p>
+        </div>
     </body>
 </html>
