enrolled courses and leaving said courses

--- a/views/enrolled-courses.html
+++ b/views/enrolled-courses.html
@@ -15,6 +15,9 @@
     </header>
 
     <body>
-        <h1>Enrolled Courses</h1>
+        <div id="courses">
+
+        </div>
+        <script src="/javascript/enrolled.js"></script>
     </body>
 </html>
