account info now also done

--- a/views/account.html
+++ b/views/account.html
@@ -16,5 +16,52 @@
 
     <body>
         <h1>Account</h1>
+
+        <table>
+            <tr>
+                <td>
+                    <b>student number</b>
+                </td>
+                <td id="student_number">
+
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <b>first name</b>
+                </td>
+                <td id="first_name">
+
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <b>last name</b>
+                </td>
+                <td id="last_name">
+
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>programme</b>
+                </td>
+                <td id="programme">
+
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>academic level</b>
+                </td>
+                <td id="academic_level">
+
+                </td>
+            </tr>
+        </table>
+
+        <script src="javascript/account.js"></script>
     </body>
 </html>
