--- a/views/course-information.html
+++ b/views/course-information.html
@@ -15,6 +15,66 @@
     </header>
 
     <body>
+        <table id="table">
+            <tr>
+                <td>
+                    <b>title</b>
+                </td>
+                <td id="title">
+
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <b>code</b>
+                </td>
+                <td id="code">
+
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <b>programme</b>
+                </td>
+                <td id="programme">
+
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>academic level</b>
+                </td>
+                <td id="level">
+
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>faculty</b>
+                </td>
+                <td id="faculty">
+
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>semester</b>
+                </td>
+                <td id="semester">
+
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>description</b>
+                </td>
+                <td id="description">
+
+                </td>
+            </tr>
+        </table>
         <script src="/javascript/course-details.js"></script>
     </body>
 </html>
