--- a/views/course-details.html
+++ b/views/course-details.html
@@ -5,7 +5,7 @@
     </head>
 
    <header>
-        <h1>Course Details</h1>
+        <h1>WEBTECH ASSIGNMENT 3</h1>
         <ul>
             <li><a href="/">Courses</a></li>
             <li><a href="/login">Login</a></li>
@@ -14,6 +14,67 @@
     </header>
 
     <body>
+        <table id="table">
+            <tr>
+                <td>
+                    <b>title</b>
+                </td>
+                <td id="title">
+
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <b>code</b>
+                </td>
+                <td id="code">
+
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <b>programme</b>
+                </td>
+                <td id="programme">
+
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>academic level</b>
+                </td>
+                <td id="level">
+
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>faculty</b>
+                </td>
+                <td id="faculty">
+
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>semester</b>
+                </td>
+                <td id="semester">
+
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>description</b>
+                </td>
+                <td id="description">
+
+                </td>
+            </tr>
+        </table>
+
         <script src="/javascript/course-details.js"></script>
     </body>
 </html>
