client side update account info

--- a/views/account.html
+++ b/views/account.html
@@ -56,11 +56,15 @@
                 <td>
                     <b>academic level</b>
                 </td>
-                <td id="academic_level">
+                <td id="level">
 
                 </td>
             </tr>
         </table>
+
+        <hr>
+
+        <a href="/account/update">Update account info</a>
 
         <script src="javascript/account.js"></script>
     </body>
