--- a/views/account-update.html
+++ b/views/account-update.html
@@ -19,11 +19,6 @@
 
         <form action="/account/update/info" method="POST">
             <div>
-                <label for="student_number">Student number</label>
-                <input type="number" id="student_number" name="student_number" required>
-            </div>
-
-            <div>
                 <label for="first_name">First name</label>
                 <input type="text" id="first_name" name="first_name" required>
             </div>
@@ -60,20 +55,20 @@
 
         <h1>Update password</h1>
 
-        <form action="/account/update/info" method="POST">
+        <form action="/account/update/pwd" method="POST">
             <div>
                 <label for="password">Old password</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="old_password" required>
             </div>
 
             <div>
                 <label for="password">New password</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="new_password" required>
             </div>
 
             <div>
                 <label for="password">Confirm new password</label>
-                <input type="password" id="confirm_password" name="confirm_password" required>
+                <input type="password" id="confirm_password" name="confirm_new_password" required>
             </div>
             <button type="submit">Update</button>
         </form>
