another db update

--- a/views/course-details.html
+++ b/views/course-details.html
@@ -22,6 +22,9 @@
                 <td id="title">
 
                 </td>
+                <td rowspan="9">
+                    <img src="/images/LHerlaar.jpg">
+                </td>
             </tr>
 
             <tr>
@@ -62,6 +65,14 @@
                     <b>semester</b>
                 </td>
                 <td id="semester">
+
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>teacher</b>
+                </td>
+                <td id="teacher">
 
                 </td>
             </tr>
