now with image support

--- a/views/course-details.html
+++ b/views/course-details.html
@@ -22,8 +22,8 @@
                 <td id="title">
 
                 </td>
-                <td rowspan="9">
-                    <img src="/images/LHerlaar.jpg">
+                <td rowspan="7">
+                    <img src="" id="image" alt="image of the teacher">
                 </td>
             </tr>
 
@@ -80,7 +80,7 @@
                 <td>
                     <b>description</b>
                 </td>
-                <td id="description">
+                <td id="description" colspan="3">
 
                 </td>
             </tr>
