extra course information on the logged in side

--- a/views/course-information.html
+++ b/views/course-information.html
@@ -23,6 +23,9 @@
                 <td id="title">
 
                 </td>
+                <td rowspan="7">
+                    <img src="" id="image" alt="image of the teacher">
+                </td>
             </tr>
 
             <tr>
@@ -68,9 +71,17 @@
             </tr>
             <tr>
                 <td>
+                    <b>teacher</b>
+                </td>
+                <td id="teacher">
+
+                </td>
+            </tr>
+            <tr>
+                <td>
                     <b>description</b>
                 </td>
-                <td id="description">
+                <td id="description" colspan="3">
 
                 </td>
             </tr>
