basic review interface

--- a/views/course-details.html
+++ b/views/course-details.html
@@ -86,6 +86,10 @@
             </tr>
         </table>
 
+        <hr>
+
+        <h2>Reviews</h2>
+
         <script src="/javascript/course-details.js"></script>
     </body>
 </html>
