--- a/views/course-information.html
+++ b/views/course-information.html
@@ -86,6 +86,50 @@
                 </td>
             </tr>
         </table>
+
+        <hr>
+
+        <h2>Rate this course</h2>
+
+        <div class="container">
+            <form action="/rate" method="POST">
+                <select>
+                    <option value="">1 star</option>
+                    <option value="">2 star</option>
+                    <option value="">3 star</option>
+                    <option value="">4 star</option>
+                    <option value="">5 star</option>
+                </select>
+
+                <textarea rows="4" cols="40" placeholder="your review"></textarea>
+
+                <br/>
+
+                <button type="submit">rate</button>
+            </form>
+        </div>
+
+        <hr>
+
+        <h2>Other reviews</h2>
+
         <script src="/javascript/course-details.js"></script>
     </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
