rating also complete

--- a/views/course-details.html
+++ b/views/course-details.html
@@ -78,6 +78,14 @@
             </tr>
             <tr>
                 <td>
+                    <b>Avg. student rating</b>
+                </td>
+                <td id="rating">
+
+                </td>
+            </tr>
+            <tr>
+                <td>
                     <b>description</b>
                 </td>
                 <td id="description" colspan="3">
