added some images and start of final styling

--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,8 @@
     </head>
 
     <header>
-        <h1>WEBTECH ASSIGNMENT 3</h1>
+        <img src="/images/logo.png">
+        <h1><a href="/">mamida student</a></h1>
         <ul>
             <li><a href="/">Courses</a></li>
             <li><a href="/login">Login</a></li>
