--- a/public/main.css
+++ b/public/main.css
@@ -47,6 +47,22 @@ header {
     padding-bottom: 0;
 }
 
+header h1 a {
+    color: #D4FF17;
+    text-decoration: none;
+}
+
+header h1 a:hover {
+    color: #D4FF17;
+    text-decoration: none;
+}
+
+header img {
+    width: 50px;
+    height: 50px;
+}
+
+
  ul {
 	height: 100%;
 	margin: 0;
