--- a/views/browse.html
+++ b/views/browse.html
@@ -5,7 +5,7 @@
     </head>
 
     <header>
-        <h1>WEBTECH ASSIGNMENT 3</h1>
+        <h1><a href="/browse">mamida student</a></h1>
         <ul>
             <li><a href="/browse">Courses</a></li>
             <li><a href="/enrolled-courses">Enrolled courses</a></li>
