--- a/views/course-details.html
+++ b/views/course-details.html
@@ -5,7 +5,7 @@
     </head>
 
    <header>
-        <h1>WEBTECH ASSIGNMENT 3</h1>
+        <h1><a href="/">mamida student</a></h1>
         <ul>
             <li><a href="/">Courses</a></li>
             <li><a href="/login">Login</a></li>
