--- a/public/main.css
+++ b/public/main.css
@@ -4,7 +4,6 @@ body {
     color: white;
     font-variant: small-caps;
     font-family: "Helvetica";
-
 }
 
 #wrapper {
@@ -33,6 +32,10 @@ body {
 
 .container:hover {
     color: #D4FF17;
+}
+
+footer {
+    background-color: #141414;
 }
 
 header {
