--- a/views/register.html
+++ b/views/register.html
@@ -11,7 +11,7 @@
             <form action="/register" method="POST">
                 <div>
                     <label for="student_number">Student number</label>
-                    <input type="number" id="student_number" name="student_number" required>
+                    <input type="text" id="student_number" name="student_number"  pattern="[0-9]+" autofocus required>
                 </div>
 
                 <div>
