meta data & titles

--- a/views/account.html
+++ b/views/account.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="main.css"/>
+        <title>Account</title>
+        <link rel="stylesheet" href="/main.css" />
+        <meta charset="UTF-8" />
+        <meta name="keywords" content="Mamida Student, Account">
+        <meta name="description" content="Shows all the account details">
     </head>
 
     <header>
