--- a/views/register.html
+++ b/views/register.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="main.css"/>
+        <title>Register</title>
+        <link rel="stylesheet" href="/main.css" />
+        <meta charset="UTF-8" />
+        <meta name="keywords" content="Mamida Student, Register">
+        <meta name="description" content="Register a new account for Mamida Student">
     </head>
 
     <body>
