--- a/views/account-update.html
+++ b/views/account-update.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="/main.css"/>
+        <title>Update Account</title>
+        <link rel="stylesheet" href="/main.css" />
+        <meta charset="UTF-8" />
+        <meta name="keywords" content="Mamida Student, Account, Update account">
+        <meta name="description" content="Update your account information for Mamida Student">
     </head>
 
     <header>
