--- a/views/course-information.html
+++ b/views/course-information.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="/main.css"/>
+        <title>Course Information</title>
+        <link rel="stylesheet" href="/main.css" />
+        <meta charset="UTF-8" />
+        <meta name="keywords" content="Mamida Student, Course information">
+        <meta name="description" content="Information about a course">
     </head>
 
    <header>
