--- a/views/enrolled-courses.html
+++ b/views/enrolled-courses.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="main.css"/>
+        <title>Enrolled Courses</title>
+        <link rel="stylesheet" href="/main.css" />
+        <meta charset="UTF-8" />
+        <meta name="keywords" content="Mamida Student, Enrolled courses">
+        <meta name="description" content="Make a new account for Mamida Student">
     </head>
 
     <header>
