--- a/views/index.html
+++ b/views/index.html
@@ -65,7 +65,7 @@
             </div>
 
             <button id="btn">Get More Courses</button>
-            <script src="javascript/app.js"></script>
+            <script src="javascript/browse.js"></script>
         </div>
     </body>
 
