--- a/views/browse.html
+++ b/views/browse.html
@@ -66,6 +66,6 @@
         </div>
 
         <button id="btn">Get More Courses</button>
-        <script src="javascript/app.js"></script>
+        <script src="javascript/browse.js"></script>
     </body>
 </html>
