--- a/views/course-information.html
+++ b/views/course-information.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Course Information</title>
@@ -8,28 +8,27 @@
         <meta name="description" content="Information about a course">
     </head>
 
-   <header>
-        <h1><a href="/browse">mamida student</a></h1>
-        <ul>
-            <li><a href="/browse">Courses</a></li>
-            <li><a href="/enrolled-courses">Enrolled courses</a></li>
-            <li><a href="/account">Account</a></li>
-            <li><a href="/logout">Logout</a></li>
-        </ul>
-    </header>
-
     <body>
+        <header>
+            <h1><a href="/browse">mamida student</a></h1>
+            <ul>
+                <li><a href="/browse">Courses</a></li>
+                <li><a href="/enrolled-courses">Enrolled courses</a></li>
+                <li><a href="/account">Account</a></li>
+                <li><a href="/logout">Logout</a></li>
+            </ul>
+        </header>
         <table id="table">
             <tr>
                 <td>
                     <b>title</b>
                 </td>
                 <td id="title">
-
                 </td>
                 <td rowspan="7">
                     <img src="" id="image" alt="image of the teacher">
                 </td>
+                <td></td>
             </tr>
 
             <tr>
@@ -37,8 +36,8 @@
                     <b>code</b>
                 </td>
                 <td id="code">
-
                 </td>
+                <td></td>
             </tr>
 
             <tr>
@@ -46,48 +45,49 @@
                     <b>programme</b>
                 </td>
                 <td id="programme">
-
                 </td>
+                <td></td>
             </tr>
             <tr>
                 <td>
                     <b>academic level</b>
                 </td>
                 <td id="level">
-
                 </td>
+                <td></td>
             </tr>
             <tr>
                 <td>
                     <b>faculty</b>
                 </td>
                 <td id="faculty">
-
                 </td>
+                <td></td>
             </tr>
             <tr>
                 <td>
                     <b>semester</b>
                 </td>
                 <td id="semester">
-
                 </td>
+                <td></td>
             </tr>
             <tr>
                 <td>
                     <b>teacher</b>
                 </td>
                 <td id="teacher">
-
                 </td>
+                <td></td>
             </tr>
             <tr>
                 <td>
                     <b>Avg. student rating</b>
                 </td>
                 <td id="rating">
-
                 </td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td>
@@ -115,7 +115,7 @@
 
                 <textarea rows="4" cols="40" placeholder="your review" name="content"></textarea>
 
-                <br/>
+                <br />
 
                 <button type="submit">rate</button>
             </form>
@@ -128,20 +128,3 @@
         <script src="/javascript/course-details.js"></script>
     </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
