--- a/views/enrolled-courses.html
+++ b/views/enrolled-courses.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Enrolled Courses</title>
@@ -8,17 +8,16 @@
         <meta name="description" content="Make a new account for Mamida Student">
     </head>
 
-    <header>
-        <h1><a href="/browse">mamida student</a></h1>
-        <ul>
-            <li><a href="/browse">Courses</a></li>
-            <li><a href="/enrolled-courses">Enrolled courses</a></li>
-            <li><a href="/account">Account</a></li>
-            <li><a href="/logout">Logout</a></li>
-        </ul>
-    </header>
-
     <body>
+        <header>
+            <h1><a href="/browse">mamida student</a></h1>
+            <ul>
+                <li><a href="/browse">Courses</a></li>
+                <li><a href="/enrolled-courses">Enrolled courses</a></li>
+                <li><a href="/account">Account</a></li>
+                <li><a href="/logout">Logout</a></li>
+            </ul>
+        </header>
         <div id="courses">
 
         </div>
