--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Courses</title>
@@ -8,16 +8,15 @@
         <meta name="description" content="All the courses in Mamida Student are displayed here">
     </head>
 
-    <header>
-        <h1><a href="/">mamida student</a></h1>
-        <ul>
-            <li><a href="/">Courses</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/register">Register</a></li>
-        </ul>
-    </header>
-
     <body>
+        <header>
+            <h1><a href="/">mamida student</a></h1>
+            <ul>
+                <li><a href="/">Courses</a></li>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/register">Register</a></li>
+            </ul>
+        </header>
         <div class="wrapper">
             <div id=search>
                 <h2>Search</h2>
@@ -64,12 +63,12 @@
             <div id="courses">
             </div>
 
-            <button id="btn">Get More Courses</button>
-            <script src="javascript/app.js"></script>
-        </div>
-    </body>
-
+        <button id="btn">Get More Courses</button>
+        <script src="javascript/app.js"></script>
+    </div>
     <footer>
-        All information displayed on this website was sourced from the <a href="https://osiris.uu.nl" target="_blank">Osiris Student system</a> and the <a href="https://www.uu.nl" target="_blank">Utrecht University website</a>. Information about the courses this website displays may not be accurate in any way. This website assumes no responsibility or liability for any errors or omissions in the content of this site.
+        All information displayed on this website was sourced from the <a href="https://osiris.uu.nl" target="_blank">Osiris Student system</a> and the <a href="https://www.uu.nl" target="_blank">Utrecht University website</a>.
+        Information about the courses this website displays may not be accurate in any way. This website assumes no responsibility or liability for any errors or omissions in the content of this site.
     </footer>
+    </body>
 </html>
