--- a/views/register.html
+++ b/views/register.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Register</title>
@@ -40,7 +40,7 @@
 
                 <div>
                     <label for="level_programme">Programme</label>
-                    <select name="level_programme">
+                    <select name="level_programme" id="level_programme">
                         <option value="BSc|Computer Science">BSc - Computer Science</option>
                         <option value="BSc|Physics and Astronomy">BSc - Physics and Astronomy</option>
                         <option value="BSc|Mathematics">BSc - Mathematics</option>
