--- a/views/account.html
+++ b/views/account.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Account</title>
@@ -8,17 +8,16 @@
         <meta name="description" content="Shows all the account details">
     </head>
 
-    <header>
-        <h1><a href="/browse">mamida student</a></h1>
-        <ul>
-            <li><a href="/browse">Courses</a></li>
-            <li><a href="/enrolled-courses">Enrolled courses</a></li>
-            <li><a href="/account">Account</a></li>
-            <li><a href="/logout">Logout</a></li>
-        </ul>
-    </header>
-
     <body>
+        <header>
+            <h1><a href="/browse">mamida student</a></h1>
+            <ul>
+                <li><a href="/browse">Courses</a></li>
+                <li><a href="/enrolled-courses">Enrolled courses</a></li>
+                <li><a href="/account">Account</a></li>
+                <li><a href="/logout">Logout</a></li>
+            </ul>
+        </header>
         <h1>Account</h1>
 
         <table>
@@ -27,7 +26,6 @@
                     <b>student number</b>
                 </td>
                 <td id="student_number">
-
                 </td>
             </tr>
 
@@ -36,7 +34,6 @@
                     <b>first name</b>
                 </td>
                 <td id="first_name">
-
                 </td>
             </tr>
 
@@ -45,7 +42,6 @@
                     <b>last name</b>
                 </td>
                 <td id="last_name">
-
                 </td>
             </tr>
             <tr>
@@ -53,7 +49,6 @@
                     <b>programme</b>
                 </td>
                 <td id="programme">
-
                 </td>
             </tr>
             <tr>
@@ -61,7 +56,6 @@
                     <b>academic level</b>
                 </td>
                 <td id="level">
-
                 </td>
             </tr>
         </table>
