--- a/views/course-details.html
+++ b/views/course-details.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Course Information</title>
@@ -8,27 +8,26 @@
         <meta name="description" content="Information about a course">
     </head>
 
-   <header>
-        <h1><a href="/">mamida student</a></h1>
-        <ul>
-            <li><a href="/">Courses</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/register">Register</a></li>
-        </ul>
-    </header>
-
     <body>
+        <header>
+            <h1><a href="/">mamida student</a></h1>
+            <ul>
+                <li><a href="/">Courses</a></li>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/register">Register</a></li>
+            </ul>
+        </header>
         <table id="table">
             <tr>
                 <td>
                     <b>title</b>
                 </td>
                 <td id="title">
-
                 </td>
                 <td rowspan="7">
                     <img src="" id="image" alt="image of the teacher">
                 </td>
+                <td></td>
             </tr>
 
             <tr>
@@ -36,8 +35,8 @@
                     <b>code</b>
                 </td>
                 <td id="code">
-
                 </td>
+                <td></td>
             </tr>
 
             <tr>
@@ -45,55 +44,55 @@
                     <b>programme</b>
                 </td>
                 <td id="programme">
-
                 </td>
+                <td></td>
             </tr>
             <tr>
                 <td>
                     <b>academic level</b>
                 </td>
                 <td id="level">
-
                 </td>
+                <td></td>
             </tr>
             <tr>
                 <td>
                     <b>faculty</b>
                 </td>
                 <td id="faculty">
-
                 </td>
+                <td></td>
             </tr>
             <tr>
                 <td>
                     <b>semester</b>
                 </td>
                 <td id="semester">
-
                 </td>
+                <td></td>
             </tr>
             <tr>
                 <td>
                     <b>teacher</b>
                 </td>
                 <td id="teacher">
-
                 </td>
+                <td></td>
             </tr>
             <tr>
                 <td>
                     <b>Avg. student rating</b>
                 </td>
                 <td id="rating">
-
                 </td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td>
                     <b>description</b>
                 </td>
                 <td id="description" colspan="3">
-
                 </td>
             </tr>
         </table>
