--- a/views/index.html
+++ b/views/index.html
@@ -67,8 +67,7 @@
             <script src="javascript/browse.js"></script>
         </div>
     <footer>
-        All information displayed on this website was sourced from the <a href="https://osiris.uu.nl" target="_blank">Osiris Student system</a> and the <a href="https://www.uu.nl" target="_blank">Utrecht University website</a>.
-        Information about the courses this website displays may not be accurate in any way. This website assumes no responsibility or liability for any errors or omissions in the content of this site.
+        All information displayed on this website was sourced from the <a href="https://osiris.uu.nl" target="_blank">Osiris Student system</a> and the <a href="https://www.uu.nl" target="_blank">Utrecht University website</a>. Information about the courses this website displays may not be accurate in any way. This website assumes no responsibility or liability for any errors or omissions in the content of this site.
     </footer>
     </body>
 </html>
