--- a/views/account.html
+++ b/views/account.html
@@ -10,7 +10,7 @@
 
     <body>
         <header>
-            <h1><a href="/browse">mamida student</a></h1>
+            <h1><a href="/browse"><img src="/mamida_logo.png" alt="mamida logo" style="width:300px"></a></h1>
             <ul>
                 <li><a href="/browse">Courses</a></li>
                 <li><a href="/enrolled-courses">Enrolled courses</a></li>
