--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <header>
-            <h1><a href="/">mamida student</a></h1>
+            <h1><a href="/"><img src="/mamida_logo.png" alt="mamida logo" style="width:300px"></a></h1>
             <ul>
                 <li><a href="/">Courses</a></li>
                 <li><a href="/login">Login</a></li>
